--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>CSS Direction and Box Model</title>
+    <title>CSS Direction and Box Model - Ex 1</title>
   </head>
   <body>
     <!-- Start coding here -->
