ex-2 should be pass

--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-  <!-- Start coding here -->
+  <div class="box-out">
+    <div class="box-in">TechUp</div>
+  </div>
 </body>
 
 </html>
