optimize test case

--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-  <div class="box-out">
-    <div class="box-in">TechUp</div>
-  </div>
+  <!-- Start coding here -->
 </body>
 
 </html>
