feat: Travel Blog

--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -13,7 +13,25 @@
 </head>
 
 <body>
-  <!-- Start coding here -->
+  <header class="text-header">
+    <h1>Travel Blog</h1>
+  </header>
+  <div class="main-content">
+    <div class="blog">
+      <p class="header-content">คาเฟ่เชียงใหม่น่าเที่ยว 10 อันดับ 2040</p>
+      <img src="image.jpeg" alt="cafeimg">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus sapiente cumque ab iusto non corrupti
+        dignissimos assumenda, fuga aperiam nostrum consequuntur sequi esse nam aliquid rem saepe illum magnam
+        laboriosam?</p>
+    </div>
+    <div class="blog">
+      <p>สถานที่น่าเที่ยว 10 อันดับ 2140</p>
+      <img src="image.jpeg" alt="travelimg">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora necessitatibus commodi ducimus tempore iure
+        nisi? Cumque ipsam, laborum, porro adipisci eos soluta provident fugit sit aliquid, voluptas excepturi est
+        veniam?</p>
+    </div>
+  </div>
 </body>
 
 </html>
