feat(index.html,style.css): add content and CSS rule

--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>CSS Direction and Box Model - Ex 1</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css" />
-  <title>CSS Direction and Box Model - Ex 1</title>
-</head>
+  <body>
+    <!-- Start coding here -->
+    <div class="box-title">
+      <h1 class="title">Travel blog</h1>
+    </div>
 
-<body>
-  <!-- Start coding here -->
-</body>
+    <div class="box-article">
+      <h2 class="article-title">ค่าเฟ่เชียงใหม่น่าเที่ยว 10 อันดับ 2040</h2>
+      <img class="article-image" atl="image-tour" src="..\ex-1\image.jpeg" />
+      <p class="article-content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex at
+        voluptates soluta quo commodi iusto maxime provident consequatur rerum
+        tempore odio quam, unde, animi, officiis esse illum eaque amet iste.
+      </p>
+    </div>
 
+    <div class="box-article">
+      <h2 class="article-title">ค่าเฟ่เชียงใหม่น่าเที่ยว 10 อันดับ 2140</h2>
+      <img class="article-image" atl="image-tour" src="..\ex-1\image.jpeg" />
+      <p class="article-content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex at
+        voluptates soluta quo commodi iusto maxime provident consequatur rerum
+        tempore odio quam, unde, animi, officiis esse illum eaque amet iste.
+      </p>
+    </div>
+  </body>
 </html>
