feat: Box-sizing

--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-  <!-- Start coding here -->
+  <div class="outside">
+    <div class="inside">
+      <p>TechUp</p>
+    </div>
+  </div>
+
 </body>
 
 </html>
