--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>CSS Direction and Box Model - Ex 2</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <title>CSS Direction and Box Model - Ex 2</title>
-</head>
-
-<body>
-  <!-- Start coding here -->
-</body>
-
+  <body>
+    <!-- Start coding here -->
+    <div class="outer-box">
+      <div class="inner-box">
+        <h1 class="text">Tech Up</h1>
+      </div>
+    </div>
+  </body>
 </html>
