add detail file html and css ex-1 ex-2

--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -1,19 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>CSS Direction and Box Model - Ex 1</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css" />
-  <title>CSS Direction and Box Model - Ex 1</title>
-</head>
+  <body>
+    <!-- Start coding here -->
+    <div class="title">
+      <h1 class="text-title">Travel Blog</h1>
+    </div>
 
-<body>
-  <!-- Start coding here -->
-</body>
+    <div class="container">
+      <div class="head-message">
+        <h1>คาเฟ่เชียงใหม่น่าเที่ยว 10 อันดับ ปี 2040</h1>
+      </div>
+      <img
+        class="pic"
+        src="https://images.unsplash.com/photo-1554118811-1e0d58224f24?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Y2FmZXxlbnwwfHwwfHx8MA%3D%3D"
+        alt="rank10cafeinchaingmai"
+      />
+      <div class="text">
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum dicta
+          magni nesciunt laboriosam, perferendis at nisi in dolore dignissimos
+          et ipsa velit iure iusto harum, deserunt sunt aliquid dolor quos!
+          Odit, placeat? Beatae ullam modi unde culpa neque error vitae ut fugit
+          quae impedit ducimus, voluptatibus ea rerum tempore dignissimos!
+        </p>
+      </div>
+    </div>
 
+    <div class="container">
+      <div class="head-message">
+        <h1>สถานที่น่าเที่ยว 10 อันดับ ปี2140</h1>
+      </div>
+      <img
+        class="pic"
+        src="https://images.unsplash.com/photo-1530521954074-e64f6810b32d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHRyYXZlbHxlbnwwfHwwfHx8MA%3D%3D"
+        alt="rank10travelinthailand"
+      />
+      <div class="text">
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum dicta
+          magni nesciunt laboriosam, perferendis at nisi in dolore dignissimos
+          et ipsa velit iure iusto harum, deserunt sunt aliquid dolor quos!
+          Odit, placeat? Beatae ullam modi unde culpa neque error vitae ut fugit
+          quae impedit ducimus, voluptatibus ea rerum tempore dignissimos!
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
